Fix card text overlap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -309,7 +309,7 @@ body {
     color: #373737;
     font-family: "PT Sans", Monaco, sans-serif;
     font-size: 1.2em;
-    max-height: 4.2em;
+    max-height: 4.52em;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
